vertically aligning filters to top due to issue in FF

--- a/scss/components/_filters.scss
+++ b/scss/components/_filters.scss
@@ -8,6 +8,7 @@
   .form-group {
     display: inline-block;
     width: auto;
+    vertical-align: top;
     padding-right: 5px;
     label {
       font-size: 11px;
